# dataready-checker

./: .gitattributes  .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/report/: report.html  report.json
examples/report-en/: report.html  report.json
examples/sample_docs/hr/: employee_handbook.md
examples/sample_docs/marketing/: deck.pptx
examples/sample_docs/misc/: 未命名.txt
examples/sample_docs/product/: spec_v1.docx
examples/sample_docs/sales/: price_list.csv
peakstar_dataready/: __init__.py  analyze.py  cli.py  collect.py  extract.py  i18n.py  report.py  rules.py  telemetry.py
peakstar_dataready/_vendor/: __init__.py
scripts/: sync_common.py
tests/: helpers.py  test_analyze.py  test_extract.py  test_integration.py
